--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -19,6 +19,16 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+	 <groupId>io.springfox</groupId> 
+	 <artifactId>springfox-swagger2</artifactId>
+	  <version>2.7.0</version> 
+	  </dependency> 
+	  <dependency> 
+	  <groupId>io.springfox</groupId> 
+	  <artifactId>springfox-swagger-ui</artifactId> 
+	  <version>2.7.0</version> 
+	  </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -37,6 +47,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
