start with neo4j

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=postesdb
+spring.data.neo4j.uri=bolt://localhost
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=irisi
 server.port=8090
 
 spring.devtools.livereload.enabled=true
@@ -19,5 +19,5 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 
-file.upload-dir=C://Users/Abdo/WebstormProjects/mongodb-project/src/assets/pieces
+file.upload-dir=C://
 
