--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 
-file.upload-dir=C://
+file.upload-dir=C://Users/AYYOUB/WebstormProjects/mongodb-project/src/assets/pieces
 
